docmd-main/v09/es/release-notes/0-9-5.md
---
title: "v0.9.5 - Herramientas de IA autónomas, modernización de Threads y mejoras de plantillas"
description: "Notas de la versión de docmd v0.9.5 - Herramientas autónomas de asistente de IA, renovación de debates colaborativos Threads con vista previa integrada, mejoras en plantillas y resolución de rutas OpenAPI."
date: "2026-08-23"
---

### Aspectos Destacados

`docmd` v0.9.5 introduce herramientas autónomas de asistente de IA con ventana de contexto ampliada a 200k, un rediseño completo del plugin colaborativo Threads con pestaña lateral derecha y tarjetas de vista previa integradas, mejoras de interfaz en las plantillas Default y Summer, y resolución de rutas OpenAPI en espacios de trabajo multiproyecto.

### Herramientas de Agente de Asistente IA y Ventana de Contexto Ampliada (`@docmd/plugin-ai` & `docmd-assistant`)

- **Suite de Herramientas MCP Autónomas**: Se integraron cinco herramientas cliente autónomas directamente en el asistente del navegador:
  - `get_site_structure`: Inspecciona la jerarquía completa del sitio, versiones (actuales e históricas), idiomas soportados y límites de proyecto.
  - `search_documentation`: Realiza búsquedas de texto completo y vectoriales semánticas opcionales en la documentación.
  - `read_documentation_page`: Lee contenido Markdown estructurado de cualquier página en todo el espacio de trabajo.
  - `navigate_to_page`: Conduce suavemente al visitante a los capítulos y secciones relevantes.
  - `copy_code_snippet`: Extrae fragmentos de código directamente al portapapeles del visitante con confirmación visual.
- **Ventana de Contexto Sin Recortes (200k por defecto)**: Se eliminaron los límites arbitrarios de 15,000 y 40,000 caracteres. El motor ahora entrega el contexto recuperado completo (hasta 200,000 caracteres por defecto) para explicaciones técnicas rigurosas y ejemplos de configuración completos.
- **`contextWindow` Configurable**: Se añadió la opción `contextWindow` (o `contextLimit`) en `plugins.ai`, permitiendo adaptar el consumo de contexto según las cuotas o requisitos de tokens.
- **Interfaz Mejorada de Bloques de Código**: Bloques de código con resaltado de sintaxis, etiquetas de lenguaje y botón de copia con un solo clic.
- **Correcciones en Telemetría y Registro de Consultas en Cloud Relay**: Se resolvió la duplicación de consultas en turnos internos de herramientas en las analíticas de Cloud y se corrigieron prefijos de comillas huérfanas en preguntas extensas.

### Complemento de Discusión Colaborativa Threads (`@docmd/plugin-threads`)

- **Persistencia de Hilos al Reabrir la Barra Lateral**: Se sustituyó el desplazamiento mutable de nodos DOM por un renderizado desacoplado desde memoria y alternancia visual mediante CSS (`body.tc-panel-open .threads-thread--inline`). Las tarjetas de hilos permanecen visibles y persistentes en todo momento sin desaparecer al cerrar y reabrir el panel.
- **Comentarios y Respuestas sin Recargar la Página**: La creación de hilos, respuestas y resolución ahora se ejecutan estrictamente en el lugar con actualización inmediata en pantalla, eliminando recargas completas del navegador.
- **Vista Previa de Comentarios Inline Rediseñada**: Tarjeta elegante bajo el texto destacado con insignia de cita textual (`"..."`) y enlace directo para enfocar y resaltar el hilo en la barra lateral.
- **Pestaña Deslizante Anclada a la Derecha**: Se trasladó `.threads-fab` a una pestaña lateral ubicada en `top: 50%; right: 0`, eliminando por completo cualquier interferencia con el botón volver arriba (`.summer-totop`) o el área inferior del asistente de IA.
- **Iconografía Moderna de Trazo**: Renovación completa de iconos basada en SVGs de trazo estilo Lucide/Feather (`messages-square`, `quote`, `external-link`, `reply`, `trash`, `plus`, `check`, `x`), en armonía con la estética de docmd.
- **Integración con Plantillas Summer y Default**: Adopción de tokens de diseño nativos en ambas plantillas (`--summer-surface`, `--summer-border`, `--summer-accent`, etc.).
- **Acciones Reveladas al Pasar el Cursor**: El botón "+ Nuevo Hilo" en encabezados ahora se revela suavemente al pasar el cursor o mediante enfoque de teclado, reduciendo el desorden visual.

### Mejoras en el Complemento OpenAPI (`@docmd/plugin-openapi`)

- **Resolución en Espacios de Trabajo Multiproyecto**: Se corrigió la búsqueda de archivos de especificación en proyectos complejos y subsitios (por ejemplo, `assets/docmd-api.json` dentro de directorios de subproyectos). El plugin ahora comprueba automáticamente el directorio del archivo markdown activo, el límite del proyecto y la raíz del espacio de trabajo.
- **Botón de Descarga Respeta la Configuración**: El botón de descarga respeta `download: true` y emite enlaces de descarga relativos a la raíz.
- **Especificaciones OpenAPI Inline**: Los bloques delimitados con ```` ```openapi ```` ahora aceptan directamente especificaciones OpenAPI en formato JSON o YAML insertadas en el archivo markdown sin necesidad de un archivo externo separado.
- **Diagnósticos de Error Mejorados**: Las rutas de especificación faltantes o inválidas muestran advertencias `.oa-error` contextuales en compilaciones de desarrollo.

### Paridad Global de Documentación

- **Sincronización Multilingüe**: Notas de versión, guías del relay de IA en Cloud y estructura de navegación sincronizadas en inglés (`en`), alemán (`de`), español (`es`) y chino (`zh`).
